styles.css
* {box-sizing: border-box; }
body {margin: 0 !important; padding: 0 !important; font-family: "Catamaran", "Palatino Linotype", "Book Antiqua", Palatino, serif; }
/* creating the columns for the grid */
@media only screen and (min-width: 769px) {
	.col-1 {width: 8.33%;}
	.col-2 {width: 16.66%;}
	.col-3 {width: 25%;}
	.col-4 {width: 33.33%;}
	.col-5 {width: 41.66%;}
	.col-6 {width: 50%;}
	.col-7 {width: 58.33%;}
	.col-8 {width: 66.66%;}
	.col-9 {width: 75%;}
	.col-10 {width: 83.33%;}
	.col-11 {width: 91.66%;}
	.col-12 {width: 100%;}
	
	.left {float: left; display: flex; background-color: snow; justify-content: center; align-content: center; overflow: hidden; }
	.left img {height: 100%; }
	.right {float: left; display: inline-block; padding: 0% 5% 0% 5%; background-color: snow; justify-content: center; align-items: center; overflow: hidden; }

	.navbar {height: 20%; display: flex; font-size: 28px; flex-wrap: wrap; align-items: center; align-content: center; justify-content: center; text-align: center; }
	.navbar a:link, a:visited {color: black; padding-left: 15px; padding-right: 15px; text-decoration: none; }	
	.navbar a:hover, a:active {color: darkorchid; padding-left: 15px; padding-right: 15px; text-decoration: none; }

	.heading {height: 10%; display: flex; text-align: left; font-size: 32px; flex-wrap: wrap; color: black; font-weight: normal; }
	.body {height: 50%; display: flex; align-items: center; font-size: 18px; flex-wrap: wrap; color: black line-height: 175%; padding: 0% 2.5% 0% 2.5%;}
	.bodysub {height: 40%; text-align: left; justify-content: left; align-self: center; font-size: 18px; flex-wrap: wrap; color: black; line-height: 175%; }
	.bodybio {height: 50%; display: block; align-items: center; vertical-align: center; font-size: 18px; flex-wrap: wrap; color: black; line-height: 200%; padding: 0% 2.5% 0% 2.5%; }

	.notice {height: 15%; display: flex; font-size: 14px; color: black; font-style: italic; line-height: 150%; align-items:flex-end; justify-content: center; text-align: center; flex-wrap: wrap; }

	.social {height: 15%; display:flex; align-items: center; justify-content: center; text-align: center; }
	.social img {display: flex; padding: 20px 20px 20px 20px; height: 70px; text-align: center; opacity: 0.60; filter: alpha(opacity=60); }
	.social img:hover {opacity: 1.0; filter: alpha(opacity=100); }
	.social a:hover, a:active {padding: 0px 0px 0px 0px; } /*This section here is necessary to overwrite the previous/parent settings for links in this section, otherwise it just goes back and takes the parent settings from the navbar */


}


/* creating the columns for mobile */
@media only screen and (max-width: 768px) {
	.col-m-1 {width: 8.33%;}
	.col-m-2 {width: 16.66%;}
	.col-m-3 {width: 25%;}
	.col-m-4 {width: 33.33%;}
	.col-m-5 {width: 41.66%;}
	.col-m-6 {width: 50%;}
	.col-m-7 {width: 58.33%;}
	.col-m-8 {width: 66.66%;}
	.col-m-9 {width: 75%;}
	.col-m-10 {width: 83.33%;}
	.col-m-11 {width: 91.66%;}
	.col-m-12 {width: 100%;}
	
	.left {display: flex; background-color: snow; justify-content: center; align-items: center; overflow: hidden; }
	.left img {width: 100%; max-height: 280px; object-fit: none; overflow-x: hidden; }
	.right {float: left; display: inline-block; padding: 2.5% 5% 0% 5%; background-color: snow; justify-content: center; align-items: center; overflow: hidden; }

	.navbar {height: 15%; display: inline-block; font-size: 24px; flex-wrap: wrap; align-items: center; justify-content: center; text-align: center;  }
	.navbar a:link, a:visited {color: black; padding-left: 15px; padding-right: 15px; text-decoration: none; }	
	.navbar a:hover, a:active {color: darkorchid; padding-left: 15px; padding-right: 15px; text-decoration: none; }
	/* Flexbox lets it adjust, align/justify centers everything, flex-wrap allows it to become one column when the page is too small, minwidth doesn't allow it to bleed into one another */

	.body {height: 50%; display: inline-table; align-items: center; font-size: 18px; flex-wrap: wrap; color: black line-height: 175%; padding: 2.5% 2.5% 2.5% 2.5%;}

	.notice {height: 15%; display: inline-table; font-size: 14px; color: black; font-style: italic; line-height: 150%; align-items:flex-end; justify-content: center; text-align: center; flex-wrap: wrap; padding: 2.5% 2.5% 2.5% 2.5% }

	.social {height: 15%; display: flex; align-items: center; justify-content: center; align-content: center; text-align: center; }
	.social img {padding: 20px 20px 20px 20px; height: 70px; opacity: 0.60; filter: alpha(opacity=60); }
	.social img:hover {opacity: 1.0; filter: alpha(opacity=100); }
	.social a:hover, a:active {padding: 0px 0px 0px 0px; } /*This section here is necessary to overwrite the previous/parent settings for links in this section, otherwise it just goes back and takes the parent settings from the navbar */

}

.row::after {content: ""; clear: both; display: table; }

/* Body of the page here */
.headings {display: block; text-align: left; font-size: 32px; flex-wrap: wrap; color: black; font-weight: normal; line-height: 200%; max-height: 280px}
.headingssub {display: block; text-align: left; font-size: 32px; flex-wrap: wrap; color: black; font-weight: normal; line-height: 200%; max-height: 280px; word-wrap: break-word;}

.bodytextsub {text-align: left; justify-content: left; align-self: center; font-size: 18px; flex-wrap: wrap; color: black; line-height: 175%; }
.bodytextsub img {padding: 10px 20px 10px 20px; height: 300px; text-align: center; }



.flipper {display: inline-block; -moz-transform: scale(-1, 1); -webkit-transform: scale(-1, 1); -o-transform: scale(-1, 1); -ms-transform: scale(-1, 1); transform: scale(-1, 1); }

